style.css
/* Normalize */

* {
  box-sizing: border-box;
}

html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
  scroll-behavior: smooth;
}

body {
  position: relative;
  margin: 0;
}

main {
  display: block;
}

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

pre {
  font-family: monospace, monospace;
  font-size: 1em;
}

a {
  background-color: transparent;
}

abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}

b,
strong {
  font-weight: bolder;
}


code,
kbd,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

img {
  border-style: none;
}

button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

button,
input {
  overflow: visible;
}

button,
select {
  text-transform: none;
}

button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}

progress {
  vertical-align: baseline;
}

textarea {
  overflow: auto;
}

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

details {
  display: block;
}

summary {
  display: list-item;
}

template {
  display: none;
}

[hidden] {
  display: none;
}

/* Site styles */

body {
  --primary: #f06c64;
  --dark-background: #2d303a;
  --light-background: #f2f2f2;
  --light: #dedede;
  --secondary: #666d89;
  --secondary-light: #767e9e;
  --pink-xxl: #f0d8d9;

  margin: 0;
  padding: 0;

  font-family: "Lato", "Arial", sans-serif;
  font-weight: normal;

  background-color: var(--dark-background);
  color: var(--secondary);
}

h1,
h2,
h3 {
  margin-block-start: 0;
  margin-block-end: 0;
}

h1 {
  font-size: 25px;

  color: white;
}

h1::after {
  content: "*";
  color: var(--primary);
}

h2,
h3 {
  font-weight: 900;
}

h2 {
  font-size: 30px;
}

h3 {
  font-size: 18px;
  letter-spacing: -0.01em;
  line-height: 0.8em;
}

p {
  margin-block-start: 0;
  margin-block-end: 0;

  margin-top: 19px;

  font-weight: 300;
  font-size: 18px;
  line-height: 30px;
  letter-spacing: -0.012em;

  color: var(--secondary-light);
}



header,
.slider,
.services,
.portfolio,
.about,
.contact,
footer {
  position: relative;

  width: 100%;
}

.slider,
.services,
.portfolio,
.about,
.contact { 
  scroll-margin-top: 89px;
}

.wrapper {
  width: 100%;
  max-width: 1020px;
  padding: 0 40px;
  margin: 0 auto;
  box-sizing: border-box;
}

.services__services,
.portfolio__pictures,
.about__employees,
.contact-form {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.services .wrapper {
  padding: 0 30px;
}

.services .wrapper > h2,
.services .wrapper > p {
  padding: 0 10px;
}

.services__services > div {
  margin: 16px 10px;
  flex: 1 0 30%;
}

.services__services p {
  margin-top: 12px;

  font-weight: normal;
  font-size: 12px;
  letter-spacing: -0.005em;
  line-height: 1.84em;
}



button {
  padding: 0;
  font: inherit;
  
  cursor: pointer;
  
  color: inherit;
  background-color: transparent;
  border: none;
}

button:disabled {
  opacity: 0.4;
  cursor: default;
}

button:focus {
  outline: none;
}



.about .social {
  margin-top: 7.5%;
  padding-left: 1px;
}

.social li:not(:first-child) {
  margin-left: 0.26em;
}

.social__link {
  display: inline-block;

  width: 32px;
  height: 32px;

  background-repeat: no-repeat;
  background-position: center center;
  border: 1px solid var(--secondary);
  border-radius: 50%;
  transition: all 0.3s ease-in-out;
}

.social__link:not(:first-child) {
  margin-left: 4px;
}

.social__link--facebook {
  background-image: url("./assets/icon_facebook.svg");
}

.social__link--google-plus {
  background-image: url("./assets/icon_google-plus.svg");
  background-position-x: 7px;
}

.social__link--twitter {
  background-image: url("./assets/icon_twitter.svg");
  background-position-x: 8px;
}

.social__link--linkedin {
  background-image: url("./assets/icon_linkedin.svg");
  background-position-y: 7px;
}



header {
  position: fixed;
  top: 0;
  z-index: 9999;

  padding-top: 30px;
  padding-bottom: 31px;

  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: -0.037em;

  background-color: var(--dark-background);
  border-bottom: 6px solid #323746;
}

header .wrapper {
  display: flex;
  justify-content: space-between;
}

.header__burger {
  display: none;
  position: absolute;
  left: 20px;
  margin-top: 2px;
  z-index: 9998;

  width: 25px;
  height: 20px;

  background-color: transparent;
  background-image: url("./assets/icon_header-burger.svg");
  background-repeat: no-repeat;
  background-size: cover;

  transition: transform 0.6s;
}

.rotated90 {
  transform: rotate(90deg);
}

nav {
  margin-top: 9px;
  letter-spacing: -0.005em;
  white-space: nowrap;
}

nav ul {
  margin: 0;
}

nav ul li,
.social li {
  display: inline-block;
  
  list-style-type: none;
}
/* ... */

